# stupidSerializer

./: CMakeLists.txt  LICENSE  README.md
include/: stupidSerializer.cpp  stupidSerializer.h
